[package]
name = "exonum-auction"
version = "0.1.0"
authors = ["Alex <busarovalex@yandex.ru>"]
edition = "2018"

[dependencies]
exonum = { version = "0.9.0" }
exonum-configuration = { version = "0.9.0" }
serde = "1.0.10"
failure = "0.1.2"
serde_derive = "1.0.10"
serde_json = "1.0.2"
log = "0.4.3"
chrono = { version = "0.4.4", features = ["serde"] }
bincode = "1"

[dev-dependencies]
exonum-testkit = { version = "0.9.0" }
pretty_assertions = "=0.5.1"
